# DwmPluginForHyprland

./: README.md
DwmPlugin/: CMakeLists.txt  DwmLayout.cpp  DwmLayout.hpp  DwmLayout_old.cpp.test  main.cpp
